# routes/index.js
@@ -10,5 +10,6 @@ router.get('/',(req , res)=>{
 })
 
 router.use('/events', require('./events'));
+router.use('/users', require('./users'));
 
 module.exports=router;
